# AllReduce-Over-MPI

./: .gitignore
allreduce_over_mpi/: .allreduce_over_mpi.cpp.swp  CMakeLists.txt  Makefile  allreduce_over_mpi.cpp  benchmark.cpp  mpi_config_file  mpi_mod.hpp  tmp_tree.cpp
allreduce_over_nccl/: CMakeLists.txt  Makefile  benchmark.cu  test.cpp
cost_model/: CMakeLists.txt  ChooseWidth.h  CostModel.h  GetPrimeFactor.h  GetWidth.h  IsPrimeNumber.h  PrintTreeStructure.h  README.md  candidates.hpp  main.cpp  test  test.cpp  timer.h
topo_count/: factor_count.py
vector_add/: .gitignore  Makefile  code_gen.py  reduce_sum.h  reduce_sum_gpu.h  vector_add.cu
